fix: fix blog article list scrollbar

--- a/apps/blog/src/components/ArticleList/Style.module.scss
+++ b/apps/blog/src/components/ArticleList/Style.module.scss
@@ -1,4 +1,3 @@
 .ArticleList {
   height: 100%;
-  overflow: auto;
 }
